dark mode and light mode fixed

--- a/style.css
+++ b/style.css
@@ -1,28 +1,22 @@
 :root{
-    /* --WBG: teal;
+    --WBG: teal;
     --DS: rgb(0, 97, 97);
     --WBC: goldenrod;
     --BG: gainsboro;
     --BC: gold;
     --CBG: ghostwhite;
     --CBC: yellow;
-    --CRBG: salmon; */
-    --WBG: rgb(23, 25, 29);
-    --DS: rgb(11, 17, 17);
-    --WBC: rgb(53, 55, 58);
-    --BG: gray;
-    --BC: darkgray;
-    --CBG: dimgrey;
-    --CBC: darkgray;
-    --CRBG: indianred;
-    --TC: white;
-    --DC: darkolivegreen;
-    --MC: rgb(23, 25, 29);
+    --CRBG: salmon;
+    --TC: black;
+    --DC: lighter;
+    --MC: rgba(23, 25, 29, 0);
 }
 
 body{
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    transition-property: all;
+    transition-duration: 200ms;
     background-color: var(--CBG);
     color: var(--TC);
 }
@@ -33,8 +27,13 @@ body{
     height: 60px;
     background-color: yellow;
     position: absolute;
-    left: 400px;
-    top: 40px;
+    margin-left: 400px;
+    margin-top: 20px;
+    z-index: 1;
+}
+
+#styling:hover {
+    cursor: pointer;
 }
 
 #moon{
@@ -58,6 +57,10 @@ body{
 #form_contain {
     display: flex;
     filter: drop-shadow(5px 5px 3px var(--DS));
+}
+
+#course > :nth-child(1){
+    margin-top: 25px;
 }
 
 form {
